@@ -107,8 +107,8 @@ GeneralizedTime_constraint(asn1_TYPE_descriptor_t *td, const void *sptr,
 	tloc = asn_GT2time(st, 0, 0);
 	if(tloc == -1 && errno != EPERM) {
 		_ASN_ERRLOG(app_errlog, app_key,
-			"%s: Invalid time format: %s",
-			td->name, strerror(errno));
+			"%s: Invalid time format: %s (%s:%d)",
+			td->name, strerror(errno), __FILE__, __LINE__);
 		return -1;
 	}
 
