@@ -659,7 +659,8 @@ SET_constraint(asn1_TYPE_descriptor_t *td, const void *sptr,
 
 	if(!sptr) {
 		_ASN_ERRLOG(app_errlog, app_key,
-			"%s: value not given", td->name);
+			"%s: value not given (%s:%d)",
+			td->name, __FILE__, __LINE__);
 		return -1;
 	}
 
@@ -677,8 +678,9 @@ SET_constraint(asn1_TYPE_descriptor_t *td, const void *sptr,
 					&(specs->_mandatory_elements), edx)) {
 					_ASN_ERRLOG(app_errlog, app_key,
 						"%s: mandatory element "
-						"%s absent",
-						td->name, elm->name);
+						"%s absent (%s:%d)",
+						td->name, elm->name,
+						__FILE__, __LINE__);
 					return -1;
 				}
 				continue;
